# pchome24-trackinglist-pricing-follower

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: docker-publish.yml
docs/: COOKIE_GUIDE.md  TELEGRAM_SETUP.md
k8s/: cronjob.yaml  pvc.yaml  secret.example.yaml
src/: api.py  config.py  db.py  main.py  slack_notifier.py  telegram_notifier.py
